kustomize/nebraska-extra/nebraska-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nebraska
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: nebraska
      app.kubernetes.io/name: nebraska
  policyTypes:
    - Egress
    - Ingress
  egress:
      # To postgres
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: nebraska
            app.kubernetes.io/name: postgresql
      ports:
      - port: tcp-postgresql
        protocol: TCP
      # To flatcar online service (https://public.update.flatcar-linux.net/v1/update/)
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 443
        protocol: TCP
  ingress:
    - ports:
      - port: http
        protocol: TCP
